# opensheet-core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
benchmarks/: bench_read.py  bench_utils.py  bench_write.py  benchmark.py
docs/: benchmarking.md  edge-cases.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_read_document_properties.rs  fuzz_read_sheet_names.rs  fuzz_read_single_sheet.rs  fuzz_read_xlsx.rs
python/opensheet_core/: __init__.py  __init__.pyi  _native.pyi  extract.py  pandas.py
src/: lib.rs  types.rs
src/reader/: xlsx.rs
src/writer/: xlsx.rs
tests/: generate_corpus.py  test_corpus.py  test_data_validation.py  test_document_properties.py  test_extract.py  test_numpy_support.py  test_pandas.py  test_security.py  test_xlsx_writer.py
tests/fixtures/: auto_filter.xlsx  column_widths.xlsx  date_cells.xlsx  defined_names.xlsx  document_properties.xlsx  empty_workbook.xlsx  freeze_panes.xlsx  huge_row_gap.xlsx  inline_strings.xlsx  large_shared_strings.xlsx  malformed_xml.xlsx  many_data_types.xlsx  merged_cells.xlsx  missing_workbook.xlsx  multiple_sheets.xlsx  negative_row_number.xlsx  rich_text_strings.xlsx  single_cell.xlsx  sparse_rows.xlsx  truncated_zip.xlsx  unicode_strings.xlsx  wrong_string_index.xlsx
